--- a/arch/ia64/boot/Makefile
+++ b/arch/ia64/boot/Makefile
@@ -32,6 +32,6 @@ $(obj)/vmlinux.bin: vmlinux FORCE
 
 LDFLAGS_bootloader = -static -T
 
-$(obj)/bootloader: $(src)/bootloader.lds $(obj)/bootloader.o \
+$(obj)/bootloader: $(src)/bootloader.lds $(obj)/bootloader.o $(obj)/fw-emu.o \
                    lib/lib.a arch/ia64/lib/lib.a FORCE
 	$(call if_changed,ld)
