ia64: Fixes for the inline-asm cleanup patch so the tree builds and 	works again on the simulator (besides the real hw, of course). 	Also, clean up simulator bootloader code so it's all in 	a single place (arch/ia64/hp/sim/bootloader/).

--- a/arch/ia64/Makefile
+++ b/arch/ia64/Makefile
@@ -66,7 +66,7 @@ drivers-$(CONFIG_IA64_HP_SIM)	+= arch/ia64/hp/sim/
 drivers-$(CONFIG_IA64_HP_ZX1)	+= arch/ia64/hp/common/ arch/ia64/hp/zx1/
 drivers-$(CONFIG_IA64_GENERIC)	+= arch/ia64/hp/common/ arch/ia64/hp/zx1/ arch/ia64/hp/sim/
 
-boot := arch/ia64/boot
+boot := arch/ia64/hp/sim/boot
 
 .PHONY: boot compressed check
 
