[PATCH] misc fixes
- nmi_watchdog documentation typo ("Randy.Dunlap" <rddunlap@osdl.org>)

- ikconfig proc requires CONFIG_PROC_FS ("Randy.Dunlap" <rddunlap@osdl.org>)

- visws build fix (Andrey Panin <pazke@donpac.ru>)

- VM lock ranking comment update

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -140,7 +140,7 @@ config IKCONFIG
 
 config IKCONFIG_PROC
 	bool "Enable access to .config through /proc/ikconfig"
-	depends on IKCONFIG
+	depends on IKCONFIG && PROC_FS
 	---help---
 	  This option enables access to kernel configuration file and build
 	  information through /proc/ikconfig.
