--- a/arch/ppc/Kconfig
+++ b/arch/ppc/Kconfig
@@ -1426,20 +1426,12 @@ config DEBUG_SPINLOCK_SLEEP
 config KGDB
 	bool "Include kgdb kernel debugger"
 	depends on DEBUG_KERNEL
+	select DEBUG_INFO
 	help
 	  Include in-kernel hooks for kgdb, the Linux kernel source level
 	  debugger.  See <http://kgdb.sourceforge.net/> for more information.
 	  Unless you are intending to debug the kernel, say N here.
 
-config DEBUG_INFO
-	bool "Compile the kernel with debug info"
-	depends on DEBUG_KERNEL
-	help
-          If you say Y here the resulting kernel image will include
-	  debugging info resulting in a larger kernel image.
-	  Say Y here only if you plan to use gdb to debug the kernel.
-	  If you don't debug the kernel, you can say N.
-	  
 choice
 	prompt "Serial Port"
 	depends on KGDB
@@ -1459,6 +1451,14 @@ config KGDB_TTYS3
 
 endchoice
 
+config KGDB_CONSOLE
+	bool "Enable serial console thru kgdb port"
+	depends on KGDB && 8xx || 8260
+	help
+	  If you enable this, all serial console messages will be sent
+	  over the gdb stub.
+	  If unsure, say N.
+
 config XMON
 	bool "Include xmon kernel debugger"
 	depends on DEBUG_KERNEL
@@ -1474,18 +1474,16 @@ config BDI_SWITCH
 	  Unless you are intending to debug the kernel with one of these
 	  machines, say N here.
 
-config MORE_COMPILE_OPTIONS
-	bool "Add any additional compile options"
-	depends on DEBUG_KERNEL && (KGDB || XMON || BDI_SWITCH)
+config DEBUG_INFO
+	bool "Compile the kernel with debug info"
+	depends on DEBUG_KERNEL
+	default y if BDI_SWITCH || XMON
 	help
-	  If you want to add additional CFLAGS to the kernel build, such as -g
-	  for KGDB or the BDI2000, enable this option and then enter what you
-	  would like to add in the next question.
-
-config COMPILE_OPTIONS
-	string "Additional compile arguments"
-	depends on MORE_COMPILE_OPTIONS
-	default "-g -ggdb"
+          If you say Y here the resulting kernel image will include
+	  debugging info resulting in a larger kernel image.
+	  Say Y here only if you plan to use some sort of debugger to
+	  debug the kernel.
+	  If you don't debug the kernel, you can say N.
 
 config BOOTX_TEXT
 	bool "Support for early boot text console (BootX or OpenFirmware only)"
