--- a/arch/h8300/Kconfig
+++ b/arch/h8300/Kconfig
@@ -190,6 +190,8 @@ endmenu
 
 source "drivers/base/Kconfig"
 
+source "drivers/mtd/Kconfig"
+
 source "drivers/block/Kconfig"
 
 source "drivers/ide/Kconfig"
