[NETFILTER]: Fix ipt_helper build problem wrt. Kconfig.
Please apply the following patch (against 2.6.0-test4).  It fixes a bug
in Kconfig causing ipt_helper not to be compiled if ip_conntrack is a
module.

--- a/net/ipv4/netfilter/Kconfig
+++ b/net/ipv4/netfilter/Kconfig
@@ -248,7 +248,7 @@ config IP_NF_MATCH_TCPMSS
 
 config IP_NF_MATCH_HELPER
 	tristate "Helper match support"
-	depends on IP_NF_CONNTRACK!=n && IP_NF_IPTABLES
+	depends on IP_NF_CONNTRACK && IP_NF_IPTABLES
 	help
 	  Helper matching allows you to match packets in dynamic connections
 	  tracked by a conntrack-helper, ie. ip_conntrack_ftp
